--- a/package.json
+++ b/package.json
@@ -8,8 +8,25 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.5.1",
+    "@fortawesome/free-brands-svg-icons": "^6.5.1",
+    "@fortawesome/free-regular-svg-icons": "^6.5.1",
+    "@fortawesome/free-solid-svg-icons": "^6.5.1",
+    "@fortawesome/vue-fontawesome": "^3.0.6",
+    "@mdi/font": "^7.4.47",
+    "axios": "^1.6.7",
+    "bootstrap": "^5.3.3",
+    "bootstrap-vue": "^2.23.1",
     "core-js": "^3.8.3",
-    "vue": "^3.2.13"
+    "lodash": "^4.17.21",
+    "lodash.throttle": "^4.1.1",
+    "sass": "^1.71.1",
+    "sass-loader": "^14.1.1",
+    "swiper": "^11.0.7",
+    "vue": "^3.4.19",
+    "vue-router": "^4.3.0",
+    "vue-slick-carousel": "^1.0.6",
+    "vue3-carousel": "^0.3.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
@@ -18,7 +35,10 @@
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^8.0.3"
+    "eslint-plugin-vue": "^8.0.3",
+    "tailwindcss": "^3.4.1",
+    "vite-plugin-vuetify": "^2.0.1",
+    "vuetify": "^3.5.6"
   },
   "eslintConfig": {
     "root": true,
